--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -1,5 +1,5 @@
-@using SilentAuction.ViewModels
-@using SilentAuction.Controllers
+@using SilentAuction.ViewModels;
+@using SilentAuction.Controllers;
 @model AuctionViewModel
 @{
     ViewData["Title"] = "Silent Auction";
@@ -9,31 +9,36 @@
 
 <div class="container">
 
+    <div class="hero-unit text-center panel panel-heading">
+        <h1>@Model.AuctionName</h1>
+        <h4>End Date: @Model.AuctionEndDate</h4>
+        <h6 id="time"></h6>
+    </div>
+
     <div class="row">
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <form asp-controller="Auctions" asp-action="SilentAuction" method="get">
-                    <div>
-                        <label for="searchQuery">Find by Name or Description: </label>
-                        <input class="form-control" type="text" id="searchQuery" name="searchQuery" value="@Model.SearchQuery" />
-                        <input type="submit" value="Search" class="btn btn-default btn-block" />
-                    </div>
-                </form>
-            </div>
-            <form asp-controller="Auctions" asp-action="SilentAuction" method="get">
-                <div>
-                    <label for="Pages">Items Per Page</label>
-                    <select asp-for="Pages">
-                        <option value="Five">5</option>
-                        <option value="Ten">10</option>
-                    </select>
+        <div class="col-md-3">
+            <div class="panel panel-default">
+                <div class="panel-body">
+                    <form asp-controller="Auctions" asp-action="SilentAuction" method="get">
+                        <div>
+                            <label for="searchQuery">Find by Name or Description: </label>
+                            <input class="form-control" type="text" id="searchQuery" name="searchQuery" value="@Model.SearchQuery" />
+                            <input type="submit" value="Search" class="btn btn-default btn-block" />
+                        </div>
+                    </form>
                 </div>
-            </form>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <div class="panel panel-default">
+                <label for="Pages">Items Per Page</label>
+                @Html.DropDownListFor(m => m.PageList, (SelectList)ViewBag.pageSelectList)
+            </div>
         </div>
     </div>
 
     @foreach (var listing in Model.Listings)
-    {
+            {
         <div class="panel panel-default">
             <div class="panel-body">
                 <div class="media">
@@ -64,29 +69,7 @@
                 </div>
             </div>
         </div>
-    }
-
-    @{
-        var prevDisabled = !Model.Listings.HasPreviousPage ? "disabled" : "";
-        var nextDisabled = !Model.Listings.HasNextPage ? "disabled" : "";
-    }
-
-    <a asp-controller="Auctions"
-       asp-action="SilentAuction"
-       asp-route-id="@Model.Id"
-       asp-route-pageIndex="@(Model.Listings.PageIndex - 1)"
-       asp-route-searchQuery="@Model.SearchQuery"
-       class="btn btn-default @prevDisabled">
-        Previous
-    </a>
-    <a asp-controller="Auctions"
-       asp-action="SilentAuction"
-       asp-route-id="@Model.Id"
-       asp-route-pageIndex="@(Model.Listings.PageIndex + 1)"
-       asp-route-searchQuery="@Model.SearchQuery"
-       class="btn btn-default @nextDisabled">
-        Next
-    </a>
+                                }
 </div>
 
 
@@ -94,3 +77,14 @@
     <hr />
     <a asp-controller="Home" asp-action="Index">Back to Admin Home</a>
 </div>
+
+@section Scripts {
+    <script type="text/javascript">
+        var myVar = setInterval(myTimer, 1000);
+
+        function myTimer() {
+            var d = new Date();
+            document.getElementById("time").innerHTML = d.toLocaleTimeString();
+        }
+    </script>
+}
