--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -60,6 +60,22 @@
         </div>
     </div>
 
+    <div class="row">
+            <div class="form-group">
+                <ul class="nav nav-pills">
+                    <li class="@(Model.CategoryID == null ? "active" : null)"><a href="@Url.Action(nameof(AuctionsController.SilentAuction), "Auctions")">All Listings</a></li>
+                    @foreach (var category in Model.Categories)
+                    {
+                        <li class="@(category.Id == Model.CategoryID ? "active" : null)">
+                            <a href="@Url.Action(nameof(AuctionsController.SilentAuction), "Auctions", new { categoryId = category.Id, searchQuery = Model.SearchQuery })">@category.Name</a>
+                        </li>
+                    }
+                </ul>
+            </div>
+    </div>
+
+
+
     @foreach (var listing in Model.Listings)
             {
         <div class="panel panel-default">
@@ -83,10 +99,11 @@
                     </div>
                     <div class="media-body">
                         <ul>
-                            <li>Starting Bid: @Html.DisplayFor(modelItem => listing.Item.Name)</li>
+                            <li>Minimum Bid: @Html.DisplayFor(modelItem => listing.MinimumBid)</li>
+                            <li>Retail Value: @Html.DisplayFor(modelItem => listing.Item.RetailPrice)</li>
+                            <li>@Html.DisplayFor(modelItem => listing.Item.Name)</li>
                             <li>@Html.DisplayFor(modelItem => listing.Item.Description)</li>
-                            <li>Increment: @Html.DisplayFor(modelItem => listing.StartingBid)</li>
-                            <li>@Html.DisplayFor(modelItem => listing.ItemId)</li>
+                            <li>Bidding Increment: @Html.DisplayFor(modelItem => listing.Increment)</li>                      
                         </ul>
                     </div>
                 </div>
