--- a/SilentAuction/Views/Auctions/SilentAuction.cshtml
+++ b/SilentAuction/Views/Auctions/SilentAuction.cshtml
@@ -121,6 +121,7 @@
              asp-route-id="@Model.Id"
              asp-route-pageIndex="@(Model.Listings.PageIndex - 1)"
              asp-route-searchQuery="@Model.SearchQuery"
+             asp-route-pageSize="@Model.PageSize"
              class="btn btn-default @prevDisabled">
                 Previous
         
@@ -130,6 +131,7 @@
              asp-route-id="@Model.Id"
              asp-route-pageIndex="@(Model.Listings.PageIndex + 1)"
              asp-route-searchQuery="@Model.SearchQuery"
+             asp-route-pageSize="@Model.PageSize"
              class="btn btn-default @nextDisabled">
                 Next
     </a>
